--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,17 +1,13 @@
-    <html>
-        <head>
-            <title>ВМФ Fails blog</title>
-        </head>
-        <body>
-            <div>
-                <h1><a href="">ВМФ Fails Blog</a></h1>
-            </div>
+    {% extends 'blog/base.html' %}
 
-                {% for post in posts %}
-             <div>
-                 <p>published: {{ post.published_date }}</p>
-                 <h1><a href="">{{ post.title }}</a></h1>
-                 <p>{{ post.text|linebreaksbr }}</p>
+    {% block content %}
+        {% for post in posts %}
+            <div class="post">
+                <div class="date">
+                    {{ post.published_date }}
+                </div>
+                      <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+                <p>{{ post.text|linebreaksbr }}</p>
             </div>
         {% endfor %}
-    </html>
+    {% endblock content %}
